# TRIDS

./: .gitignore  README.md  main.cpp  pyproject.toml  setup.py
cmake/: trids-config.cmake.in
cmake/linux/: CMakeLists.txt  env-cu118.yml  env-cu126.yml  env-cuda118.yml  env-cuda126.yml
cmake/windows/: CMakeLists.txt  build.bat  environment.yml  msvc_compat.h  trids_nvcc_driver.py
csrc/: bucket.cpp  cluster.cpp  conformer.cpp  engine.cpp  feat.cpp  graph.cpp  grid.cu  kernel.cu  log.cpp  mdn.cpp  rand.cpp  receptor.cpp  result.cpp  rotation.cpp  sampling.cu  scorer.cpp  scoring.cu  siter.cpp  surface.cu  task.cpp  utility.cpp  vina_scorer.cpp
csrc/python/: api.cpp
examples/: 4YKQ_ligand_init.sdf  blind_out.sdf  smiles.smi
include/: bucket.cuh  cluster.h  conformer.h  constant.h  engine.h  error.h  feat.h  graph.h  grid.cuh  kernel.cuh  log.h  mdn.h  rand.h  receptor.h  result.h  rotation.h  sampling.cuh  scorer.h  scoring.cuh  siter.h  surface.cuh  task.h  utility.h  vina_scorer.h
plugins/pymol/: trids_gui.py
tests/: ligand.sdf  test_pymol.py  test_trids.py
trids/: __init__.py  api.py  dock.py  molecule.py  scorer.py  utils.py
